[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Passdoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Walk Pass/levels/7.png" type="Texture" id=2]
[ext_resource path="res://scenes/TileMap.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Player1.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/Passkey7.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Wall Priz7.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Level7.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Level7" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [ -112.0 ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327698, 16, 0, -327697, 16, 0, -327696, 16, 0, -327695, 16, 0, -327694, 16, 0, -327693, 16, 0, -327692, 16, 0, -327691, 16, 0, -327690, 16, 0, -327689, 16, 0, -327688, 16, 0, -327687, 16, 0, -327686, 16, 0, -327685, 16, 0, -327684, 16, 0, -327683, 16, 0, -327682, 16, 0, -327681, 16, 0, -393216, 16, 0, -393215, 16, 0, -393214, 16, 0, -393213, 16, 0, -393212, 16, 0, -393211, 16, 0, -393210, 16, 0, -393209, 16, 0, -393208, 16, 0, -393207, 16, 0, -393206, 10, 0, -393205, 16, 0, -393204, 16, 0, -393203, 16, 0, -262162, 16, 0, -262161, 16, 0, -262160, 16, 0, -262159, 16, 0, -262158, 16, 0, -262157, 16, 0, -262156, 16, 0, -262155, 16, 0, -262154, 16, 0, -262153, 16, 0, -262152, 16, 0, -262151, 16, 0, -262150, 16, 0, -262149, 16, 0, -262148, 16, 0, -262147, 16, 0, -262146, 16, 0, -262145, 16, 0, -327680, 16, 0, -327679, 16, 0, -327678, 16, 0, -327677, 16, 0, -327676, 16, 0, -327675, 16, 0, -327674, 16, 0, -327673, 16, 0, -327672, 16, 0, -327671, 16, 0, -327670, 10, 0, -327669, 16, 0, -327668, 16, 0, -327667, 16, 0, -196626, 16, 0, -196625, 16, 0, -196624, 10, 0, -196623, 10, 0, -196622, 10, 0, -196621, 10, 0, -196620, 10, 0, -196619, 16, 0, -196618, 10, 0, -196617, 10, 0, -196616, 10, 0, -196615, 10, 0, -196614, 10, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 16, 0, -262144, 10, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 10, 0, -262139, 10, 0, -262138, 10, 0, -262137, 10, 0, -262136, 10, 0, -262135, 16, 0, -262134, 10, 0, -262133, 10, 0, -262132, 16, 0, -262131, 16, 0, -131090, 16, 0, -131089, 16, 0, -131088, 10, 0, -131087, 10, 0, -131086, 10, 0, -131085, 10, 0, -131084, 16, 0, -131083, 16, 0, -131082, 10, 0, -131081, 10, 0, -131080, 10, 0, -131079, 16, 0, -131078, 16, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 0, -131074, 10, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 10, 0, -196605, 10, 0, -196604, 16, 0, -196603, 16, 0, -196602, 10, 0, -196601, 10, 0, -196600, 10, 0, -196599, 16, 0, -196598, 16, 0, -196597, 10, 0, -196596, 16, 0, -196595, 16, 0, -65554, 16, 0, -65553, 16, 0, -65552, 10, 0, -65551, 16, 0, -65550, 10, 0, -65549, 10, 0, -65548, 10, 0, -65547, 10, 0, -65546, 10, 0, -65545, 10, 0, -65544, 10, 0, -65543, 10, 0, -65542, 16, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 10, 0, -65537, 16, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 16, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 16, 0, -131059, 16, 0, -18, 16, 0, -17, 16, 0, -16, 10, 0, -15, 16, 0, -14, 16, 0, -13, 16, 0, -12, 16, 0, -11, 16, 0, -10, 16, 0, -9, 16, 0, -8, 16, 0, -7, 16, 0, -6, 16, 0, -5, 16, 0, -4, 16, 0, -3, 16, 0, -2, 16, 0, -1, 16, 0, -65536, 16, 0, -65535, 16, 0, -65534, 16, 0, -65533, 16, 0, -65532, 16, 0, -65531, 16, 0, -65530, 16, 0, -65529, 16, 0, -65528, 16, 0, -65527, 16, 0, -65526, 16, 0, -65525, 10, 0, -65524, 16, 0, -65523, 16, 0, 65518, 16, 0, 65519, 16, 0, 65520, 10, 0, 65521, 10, 0, 65522, 10, 0, 65523, 10, 0, 65524, 10, 0, 65525, 16, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 16, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 16, 0, 13, 16, 0, 131054, 16, 0, 131055, 16, 0, 131056, 10, 0, 131057, 10, 0, 131058, 10, 0, 131059, 10, 0, 131060, 10, 0, 131061, 10, 0, 131062, 10, 0, 131063, 10, 0, 131064, 10, 0, 131065, 16, 0, 131066, 16, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 16, 0, 131071, 16, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 16, 0, 65541, 16, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 16, 0, 65549, 16, 0, 196590, 16, 0, 196591, 16, 0, 196592, 10, 0, 196593, 10, 0, 196594, 10, 0, 196595, 16, 0, 196596, 10, 0, 196597, 16, 0, 196598, 10, 0, 196599, 10, 0, 196600, 10, 0, 196601, 10, 0, 196602, 16, 0, 196603, 10, 0, 196604, 10, 0, 196605, 10, 0, 196606, 10, 0, 196607, 10, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 16, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 131080, 10, 0, 131081, 16, 0, 131082, 10, 0, 131083, 10, 0, 131084, 16, 0, 131085, 16, 0, 262126, 16, 0, 262127, 16, 0, 262128, 16, 0, 262129, 16, 0, 262130, 16, 0, 262131, 16, 0, 262132, 10, 0, 262133, 16, 0, 262134, 16, 0, 262135, 16, 0, 262136, 16, 0, 262137, 16, 0, 262138, 16, 0, 262139, 16, 0, 262140, 16, 0, 262141, 16, 0, 262142, 16, 0, 262143, 16, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 10, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 327662, 16, 0, 327663, 16, 0, 327664, 10, 0, 327665, 10, 0, 327666, 10, 0, 327667, 10, 0, 327668, 10, 0, 327669, 16, 0, 327670, 10, 0, 327671, 10, 0, 327672, 10, 0, 327673, 10, 0, 327674, 16, 0, 327675, 10, 0, 327676, 10, 0, 327677, 10, 0, 327678, 10, 0, 327679, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 16, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 10, 0, 262156, 16, 0, 262157, 16, 0, 393198, 16, 0, 393199, 16, 0, 393200, 10, 0, 393201, 10, 0, 393202, 10, 0, 393203, 10, 0, 393204, 10, 0, 393205, 16, 0, 393206, 16, 0, 393207, 10, 0, 393208, 10, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 393214, 10, 0, 393215, 16, 0, 327680, 16, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 16, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 16, 0, 327689, 16, 0, 327690, 10, 0, 327691, 10, 0, 327692, 16, 0, 327693, 16, 0, 458734, 16, 0, 458735, 16, 0, 458736, 10, 0, 458737, 16, 0, 458738, 10, 0, 458739, 10, 0, 458740, 10, 0, 458741, 10, 0, 458742, 10, 0, 458743, 10, 0, 458744, 10, 0, 458745, 10, 0, 458746, 16, 0, 458747, 10, 0, 458748, 10, 0, 458749, 10, 0, 458750, 10, 0, 458751, 16, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 0, 393219, 10, 0, 393220, 10, 0, 393221, 10, 0, 393222, 10, 0, 393223, 10, 0, 393224, 10, 0, 393225, 16, 0, 393226, 16, 0, 393227, 10, 0, 393228, 16, 0, 393229, 16, 0, 524270, 16, 0, 524271, 16, 0, 524272, 10, 0, 524273, 16, 0, 524274, 16, 0, 524275, 16, 0, 524276, 16, 0, 524277, 16, 0, 524278, 16, 0, 524279, 16, 0, 524280, 16, 0, 524281, 16, 0, 524282, 16, 0, 524283, 16, 0, 524284, 16, 0, 524285, 16, 0, 524286, 16, 0, 524287, 16, 0, 458752, 16, 0, 458753, 16, 0, 458754, 16, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 10, 0, 458763, 10, 0, 458764, 16, 0, 458765, 16, 0, 589806, 16, 0, 589807, 16, 0, 589808, 10, 0, 589809, 10, 0, 589810, 10, 0, 589811, 10, 0, 589812, 10, 0, 589813, 16, 0, 589814, 10, 0, 589815, 10, 0, 589816, 10, 0, 589817, 10, 0, 589818, 16, 0, 589819, 10, 0, 589820, 10, 0, 589821, 10, 0, 589822, 10, 0, 589823, 10, 0, 524288, 10, 0, 524289, 10, 0, 524290, 10, 0, 524291, 10, 0, 524292, 16, 0, 524293, 10, 0, 524294, 10, 0, 524295, 10, 0, 524296, 10, 0, 524297, 10, 0, 524298, 10, 0, 524299, 10, 0, 524300, 16, 0, 524301, 16, 0, 655342, 16, 0, 655343, 16, 0, 655344, 10, 0, 655345, 10, 0, 655346, 10, 0, 655347, 10, 0, 655348, 10, 0, 655349, 10, 0, 655350, 10, 0, 655351, 10, 0, 655352, 10, 0, 655353, 16, 0, 655354, 16, 0, 655355, 10, 0, 655356, 10, 0, 655357, 10, 0, 655358, 16, 0, 655359, 16, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 16, 0, 589829, 16, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 16, 0, 589834, 10, 0, 589835, 10, 0, 589836, 16, 0, 589837, 16, 0, 720878, 16, 0, 720879, 16, 0, 720880, 10, 0, 720881, 10, 0, 720882, 10, 0, 720883, 10, 0, 720884, 10, 0, 720885, 16, 0, 720886, 10, 0, 720887, 10, 0, 720888, 10, 0, 720889, 10, 0, 720890, 10, 0, 720891, 10, 0, 720892, 10, 0, 720893, 10, 0, 720894, 10, 0, 720895, 16, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 10, 0, 655369, 16, 0, 655370, 10, 0, 655371, 10, 0, 655372, 16, 0, 655373, 16, 0, 786414, 16, 0, 786415, 16, 0, 786416, 16, 0, 786417, 16, 0, 786418, 16, 0, 786419, 16, 0, 786420, 16, 0, 786421, 16, 0, 786422, 16, 0, 786423, 16, 0, 786424, 16, 0, 786425, 16, 0, 786426, 16, 0, 786427, 16, 0, 786428, 16, 0, 786429, 16, 0, 786430, 16, 0, 786431, 16, 0, 720896, 16, 0, 720897, 16, 0, 720898, 16, 0, 720899, 16, 0, 720900, 16, 0, 720901, 16, 0, 720902, 16, 0, 720903, 16, 0, 720904, 16, 0, 720905, 16, 0, 720906, 16, 0, 720907, 10, 0, 720908, 16, 0, 720909, 16, 0, 851950, 16, 0, 851951, 16, 0, 851952, 16, 0, 851953, 16, 0, 851954, 16, 0, 851955, 16, 0, 851956, 16, 0, 851957, 16, 0, 851958, 16, 0, 851959, 16, 0, 851960, 16, 0, 851961, 16, 0, 851962, 16, 0, 851963, 16, 0, 851964, 16, 0, 851965, 16, 0, 851966, 16, 0, 851967, 16, 0, 786432, 16, 0, 786433, 16, 0, 786434, 16, 0, 786435, 16, 0, 786436, 16, 0, 786437, 16, 0, 786438, 16, 0, 786439, 16, 0, 786440, 16, 0, 786441, 16, 0, 786442, 16, 0, 786443, 16, 0, 786444, 16, 0, 786445, 16, 0 )

[node name="7" type="Sprite" parent="TileMap"]
position = Vector2( -256, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TileMap"]
margin_left = -272.0
margin_top = 144.0
margin_right = -128.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
text = "agiad_star"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -288, -96 )
anchor_mode = 0
current = true
zoom = Vector2( 0.4, 0.42 )

[node name="Passdoor" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, -64 )

[node name="Passkey7" parent="." instance=ExtResource( 6 )]
position = Vector2( 144, 0 )

[node name="Wall Priz7" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, -96 )

[node name="Player1" parent="." instance=ExtResource( 4 )]
position = Vector2( -256, 160 )

[node name="Enemy1" parent="." instance=ExtResource( 8 )]
position = Vector2( -256, 96 )

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( -112, 128 )

[node name="Enemy3" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 160 )

[node name="Enemy4" parent="." instance=ExtResource( 8 )]
position = Vector2( 176, 64 )

[node name="Enemy5" parent="." instance=ExtResource( 8 )]
position = Vector2( 160, 32 )

[node name="Enemy6" parent="." instance=ExtResource( 8 )]
position = Vector2( 128, 96 )

[node name="Enemy7" parent="." instance=ExtResource( 8 )]
position = Vector2( -48, 96 )

[node name="Enemy8" parent="." instance=ExtResource( 8 )]
position = Vector2( -160, 64 )

[node name="Enemy9" parent="." instance=ExtResource( 8 )]
position = Vector2( 176, 0 )

[node name="Enemy10" parent="." instance=ExtResource( 8 )]
position = Vector2( 16, 0 )

[node name="Enemy11" parent="." instance=ExtResource( 8 )]
position = Vector2( -48, 0 )

[node name="Enemy12" parent="." instance=ExtResource( 8 )]
position = Vector2( -128, 32 )

[node name="Enemy13" parent="." instance=ExtResource( 8 )]
position = Vector2( 128, 32 )

[node name="Enemy14" parent="." instance=ExtResource( 8 )]
position = Vector2( -192, -64 )

[node name="Enemy15" parent="." instance=ExtResource( 8 )]
position = Vector2( -112, -32 )

[node name="Enemy16" parent="." instance=ExtResource( 8 )]
position = Vector2( -80, -32 )

[node name="Enemy17" parent="." instance=ExtResource( 8 )]
position = Vector2( 48, -32 )

[node name="Enemy18" parent="." instance=ExtResource( 8 )]
position = Vector2( 128, -64 )
